--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
 # defaults file for ansible-rootmail-cfg
 
-#rootmail_server_from_email:
+#rootmail_server_from_email:  server@example.com
+#rootmail_server_mailname:  example.com
