--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,6 @@ before_install:
   # Pull container from Docker Hub.
   - 'docker pull geerlingguy/docker-${distro}-ansible:latest'
 
-before_script:
-  - echo localhost > inventory
-  - ansible-galaxy install --role-file requirements.yml
 
 script:
   # Create a random file to store the container ID.
@@ -45,7 +42,8 @@ script:
   # Ansible syntax check.
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/role_under_test/tests/test.yml --syntax-check'
 
-
+ # Install dependencies.
+  - 'docker exec "$(cat ${container_id})" ansible-galaxy install -r /etc/ansible/roles/role_under_test/tests/requirements.yml'
 
   # Test the Ansible role.
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/role_under_test/tests/test.yml'
