--- a/tests/test.yml
+++ b/tests/test.yml
@@ -3,6 +3,7 @@
 
   vars:
     rootmail_server_from_email: 'tester@example.com'
+    rootmail_server_mailname: "example.com"
 
   roles:
     - geerlingguy.exim
