--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ script:
 
 
   # Test the Ansible role.
-  - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/role_under_test/tests/test.yml'
+  - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/role_under_test/tests/test.yml --diff'
 
  # Test role idempotence.
   - idempotence=$(mktemp)
