--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,13 +6,13 @@ galaxy_info:
   license: BDS
   min_ansible_version: 1.8
   platforms:
-  - name: Ubuntu
-    versions:
-    - all
-  - name: Debian
-    versions:
-    - all
-  categories:
-  - networking
-  - mail
+    - name: Ubuntu
+      versions:
+        - all
+    - name: Debian
+      versions:
+        - all
+  galaxy_tags:
+    - networking
+    - mail
 dependencies: []
